--- a/incs/libft/Makefile
+++ b/incs/libft/Makefile
@@ -1,4 +1,5 @@
-SRCS	 = ft_is_upper_case.c ft_lower_str.c\
+SRCS	 = ft_is_unclosed_quote.c ft_check_pipe.c \
+		   ft_is_upper_case.c ft_lower_str.c ft_wordlen.c ft_worddup.c ft_skip_quote.c \
 		   ft_is_quote.c ft_is_builtin.c ft_is_op.c ft_is_file.c ft_tabdup.c ft_is_whitespace.c \
 		   ft_isalpha.c ft_isprint.c ft_isascii.c ft_isdigit.c ft_isalnum.c ft_calloc.c \
 		   ft_bzero.c ft_strlen.c ft_memset.c ft_memcpy.c ft_memmove.c ft_toupper.c \
